--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -54,6 +54,16 @@
           <dt>Copyright &copy; 2007 The Android Open Source Project</dt>
         </dl>
       </li>
+      <li><a href="#1934118923">Android DataStore (1.0.0-alpha06)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android DataStore Core (1.0.0-alpha06)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
       <li><a href="#1934118923">Android DB (2.0.1)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
@@ -119,6 +129,16 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
+      <li><a href="#1934118923">Android Preferences DataStore (1.0.0-alpha06)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android Preferences DataStore Core (1.0.0-alpha06)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
       <li><a href="#1934118923">Android Resources Library (1.3.0-alpha01)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
@@ -144,11 +164,6 @@
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support CardView v7 (1.0.0)</a>
-        <dl>
-          <dt>Copyright &copy; 2011 The Android Open Source Project</dt>
-        </dl>
-      </li>
       <li><a href="#1934118923">Android Support Library Annotations (1.2.0-alpha01)</a>
         <dl>
           <dt>Copyright &copy; 2013 The Android Open Source Project</dt>
@@ -162,11 +177,6 @@
       <li><a href="#1934118923">Android Support Library compat (1.5.0-alpha04)</a>
         <dl>
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Android Support Library Coordinator Layout (1.1.0)</a>
-        <dl>
-          <dt>Copyright &copy; 2011 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">Android Support Library Cursor Adapter (1.0.0)</a>
@@ -204,11 +214,6 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support RecyclerView v7 (1.1.0)</a>
-        <dl>
-          <dt>Copyright &copy; 2014 The Android Open Source Project</dt>
-        </dl>
-      </li>
       <li><a href="#1934118923">Android Support SQLite - Framework Implementation (2.0.1)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
@@ -219,124 +224,109 @@
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Transition Support Library (1.2.0)</a>
-        <dl>
-          <dt>Copyright &copy; 2016 The Android Open Source Project</dt>
-        </dl>
-      </li>
       <li><a href="#1934118923">AndroidX Autofill (1.0.0)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">AndroidX Widget ViewPager2 (1.0.0)</a>
-        <dl>
-          <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Compose Animation (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Animation (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation Core (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Animation Core (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Dispatch (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Dispatch (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Foundation (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Foundation (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Geometry (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Geometry (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Graphics (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Graphics (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Layouts (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Layouts (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose LiveData integration (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose LiveData integration (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Components (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Material Components (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Icons Core (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Material Icons Core (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Ripple (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Material Ripple (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Navigation (1.0.0-alpha04)</a>
+      <li><a href="#1934118923">Compose Navigation (1.0.0-alpha05)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Runtime (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Runtime (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Saved Instance State support (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Saved Instance State support (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Tooling (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI primitives (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose UI primitives (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI Text (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose UI Text (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Unit (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Unit (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Util (1.0.0-alpha09)</a>
+      <li><a href="#1934118923">Compose Util (1.0.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Core Kotlin Extensions (1.3.2)</a>
+      <li><a href="#1934118923">Core Kotlin Extensions (1.1.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Experimental annotation (1.0.0)</a>
-        <dl>
-          <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">IntelliJ IDEA Annotations (13.0)</a>
@@ -362,11 +352,6 @@
       <li><a href="#1934118923">kotlinx-coroutines-core (1.4.1)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Material Components for Android (1.2.1)</a>
-        <dl>
-          <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">VersionedParcelable (1.1.0)</a>
