--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -14,22 +14,27 @@
 <a name="0"></a>
       <pre>No license found</pre>
       <hr>
-      <li><a href="#1934118923">Accompanist Insets library (0.4.1)</a>
+      <li><a href="#1934118923">Accompanist Insets library (0.5.1)</a>
         <dl>
           <dt>Copyright &copy; 20xx Chris Banes</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity (1.2.0-alpha07)</a>
+      <li><a href="#1934118923">Activity (1.1.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity (1.1.0-alpha01)</a>
+      <li><a href="#1934118923">Activity (1.3.0-alpha02)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity Kotlin Extensions (1.1.0)</a>
+      <li><a href="#1934118923">Activity Compose (1.3.0-alpha02)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Activity Kotlin Extensions (1.3.0-alpha02)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
@@ -49,7 +54,7 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android ConstraintLayout Core (1.0.0-alpha1)</a>
+      <li><a href="#1934118923">Android ConstraintLayout Core (1.0.0-alpha3)</a>
         <dl>
           <dt>Copyright &copy; 2007 The Android Open Source Project</dt>
         </dl>
@@ -69,7 +74,7 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle Kotlin Extensions (2.2.0)</a>
+      <li><a href="#1934118923">Android Lifecycle Kotlin Extensions (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
@@ -79,32 +84,32 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle LiveData Core (2.3.0-alpha06)</a>
+      <li><a href="#1934118923">Android Lifecycle LiveData Core (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle Runtime (2.3.0-alpha06)</a>
+      <li><a href="#1934118923">Android Lifecycle Runtime (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle ViewModel (2.3.0-alpha06)</a>
+      <li><a href="#1934118923">Android Lifecycle ViewModel (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle ViewModel Kotlin Extensions (2.2.0)</a>
+      <li><a href="#1934118923">Android Lifecycle ViewModel Kotlin Extensions (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle ViewModel with SavedState (2.3.0-alpha06)</a>
+      <li><a href="#1934118923">Android Lifecycle ViewModel with SavedState (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Lifecycle-Common (2.3.0-alpha06)</a>
+      <li><a href="#1934118923">Android Lifecycle-Common (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
@@ -164,7 +169,12 @@
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support Library Annotations (1.2.0-alpha01)</a>
+      <li><a href="#1934118923">Android Support DynamicAnimation (1.1.0-alpha03)</a>
+        <dl>
+          <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android Support Library Annotations (1.2.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2013 The Android Open Source Project</dt>
         </dl>
@@ -174,7 +184,7 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support Library compat (1.5.0-alpha04)</a>
+      <li><a href="#1934118923">Android Support Library compat (1.5.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
         </dl>
@@ -224,107 +234,122 @@
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
         </dl>
       </li>
+      <li><a href="#1934118923">Android Tracing (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
       <li><a href="#1934118923">AndroidX Autofill (1.0.0)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Animation (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation Core (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Animation Core (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Dispatch (1.0.0-alpha10)</a>
-        <dl>
-          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Compose Foundation (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Foundation (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Geometry (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Geometry (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Graphics (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Graphics (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Layouts (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Layouts (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose LiveData integration (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose LiveData integration (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Components (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Material Components (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Icons Core (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Material Icons Core (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Ripple (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Material Ripple (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Navigation (1.0.0-alpha05)</a>
+      <li><a href="#1934118923">Compose Navigation (1.0.0-alpha07)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Runtime (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Runtime (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Saved Instance State support (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Saveable (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Tooling (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI primitives (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Tooling Data (1.0.0-alpha12)</a>
+        <dl>
+          <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose UI primitives (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI Text (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose UI Text (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Unit (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Unit (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Util (1.0.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Util (1.0.0-alpha12)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">ConstraintLayout for Jetpack Compose (1.0.0-alpha02)</a>
+        <dl>
+          <dt>Copyright &copy; 2007 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">Core Kotlin Extensions (1.1.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Dynamic animation Kotlin Extensions (1.0.0-alpha03)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
@@ -334,12 +359,12 @@
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib (1.4.21)</a>
+      <li><a href="#1934118923">Kotlin Stdlib (1.4.30)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib Common (1.4.21)</a>
+      <li><a href="#1934118923">Kotlin Stdlib Common (1.4.30)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
@@ -352,6 +377,16 @@
       <li><a href="#1934118923">kotlinx-coroutines-core (1.4.1)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Lifecycle ViewModel Compose (1.0.0-alpha01)</a>
+        <dl>
+          <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">SavedState Kotlin Extensions (1.1.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">VersionedParcelable (1.1.0)</a>
