--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -6,14 +6,24 @@
   <body>
     <h3>Notice for packages:</h3>
     <ul>
-      <li><a href="#1934118923">Accompanist FlowLayout library (0.10.0)</a>
+      <li><a href="#1934118923">Accompanist FlowLayout library (0.19.0)</a>
         <dl>
           <dt>Copyright &copy; 20xx Google</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Accompanist Insets library (0.10.0)</a>
+      <li><a href="#1934118923">Accompanist Insets library (0.19.0)</a>
         <dl>
           <dt>Copyright &copy; 20xx Google</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Accompanist System UI Controller library (0.19.0)</a>
+        <dl>
+          <dt>Copyright &copy; 20xx Google</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Activity (1.3.1)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">Activity (1.1.0)</a>
@@ -21,22 +31,22 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity (1.3.0-alpha08)</a>
-        <dl>
-          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Activity Compose (1.3.0-alpha08)</a>
+      <li><a href="#1934118923">Activity Compose (1.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity Kotlin Extensions (1.3.0-alpha08)</a>
+      <li><a href="#1934118923">Activity Kotlin Extensions (1.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android AppCompat Library (1.3.0)</a>
+      <li><a href="#1934118923">Android App Startup Runtime (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android AppCompat Library (1.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2011 The Android Open Source Project</dt>
         </dl>
@@ -51,17 +61,17 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android ConstraintLayout Core (1.0.0-beta02)</a>
+      <li><a href="#1934118923">Android ConstraintLayout Core (1.0.1)</a>
         <dl>
           <dt>Copyright &copy; 2007 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android DataStore (1.0.0-beta01)</a>
+      <li><a href="#1934118923">Android DataStore (1.0.0)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android DataStore Core (1.0.0-beta01)</a>
+      <li><a href="#1934118923">Android DataStore Core (1.0.0)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
@@ -111,32 +121,42 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Common (2.4.0-alpha01)</a>
+      <li><a href="#1934118923">Android Lifecycle-Common for Java 8 Language (2.3.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Runtime (2.4.0-alpha01)</a>
+      <li><a href="#1934118923">Android Navigation Common (2.4.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Runtime Kotlin Extensions (2.4.0-alpha01)</a>
+      <li><a href="#1934118923">Android Navigation Common Kotlin Extensions (2.4.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Preferences DataStore (1.0.0-beta01)</a>
+      <li><a href="#1934118923">Android Navigation Runtime (2.4.0-alpha10)</a>
+        <dl>
+          <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android Navigation Runtime Kotlin Extensions (2.4.0-alpha10)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android Preferences DataStore (1.0.0)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Preferences DataStore Core (1.0.0-beta01)</a>
+      <li><a href="#1934118923">Android Preferences DataStore Core (1.0.0)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Resources Library (1.3.0)</a>
+      <li><a href="#1934118923">Android Resources Library (1.3.1)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
@@ -176,9 +196,14 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support Library compat (1.5.0)</a>
+      <li><a href="#1934118923">Android Support Library compat (1.6.0)</a>
         <dl>
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android Support Library core utils (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2011 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">Android Support Library Cursor Adapter (1.0.0)</a>
@@ -191,12 +216,17 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
+      <li><a href="#1934118923">Android Support Library Document File (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
       <li><a href="#1934118923">Android Support Library Drawer Layout (1.0.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support Library fragment (1.3.4)</a>
+      <li><a href="#1934118923">Android Support Library fragment (1.3.6)</a>
         <dl>
           <dt>Copyright &copy; 2011 The Android Open Source Project</dt>
         </dl>
@@ -211,9 +241,24 @@
           <dt>Copyright &copy; 2011 The Android Open Source Project</dt>
         </dl>
       </li>
+      <li><a href="#1934118923">Android Support Library Local Broadcast Manager (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android Support Library Print (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
       <li><a href="#1934118923">Android Support Library View Pager (1.0.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Android Support Palette v7 (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2014 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">Android Support SQLite - Framework Implementation (2.1.0)</a>
@@ -236,112 +281,122 @@
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
+      <li><a href="#1934118923">androidx.profileinstaller:profileinstaller (1.0.3)</a>
+        <dl>
+          <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
+        </dl>
+      </li>
       <li><a href="#1934118923">Collections Kotlin Extensions (1.1.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Animation (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation Core (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Animation Core (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Foundation (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Foundation (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Geometry (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Geometry (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Graphics (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Graphics (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Layouts (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Layouts (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose LiveData integration (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose LiveData integration (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Components (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Material Components (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Icons Core (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Material Icons Core (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Ripple (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Material Ripple (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Navigation (2.4.0-alpha01)</a>
+      <li><a href="#1934118923">Compose Navigation (2.4.0-alpha10)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Runtime (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Runtime (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Saveable (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Saveable (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Tooling (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling Data (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Tooling API (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI primitives (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Tooling Data (1.0.3)</a>
+        <dl>
+          <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose UI primitives (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI Text (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose UI Text (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Unit (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Unit (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Util (1.0.0-beta07)</a>
+      <li><a href="#1934118923">Compose Util (1.0.3)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">ConstraintLayout for Jetpack Compose (1.0.0-alpha07)</a>
+      <li><a href="#1934118923">ConstraintLayout for Jetpack Compose (1.0.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2007 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Core Kotlin Extensions (1.5.0-beta03)</a>
+      <li><a href="#1934118923">Core Kotlin Extensions (1.6.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
@@ -361,34 +416,44 @@
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib (1.4.32)</a>
+      <li><a href="#1934118923">Kotlin Stdlib (1.5.30)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib Common (1.4.32)</a>
+      <li><a href="#1934118923">Kotlin Stdlib Common (1.5.30)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">kotlinx-collections-immutable (0.3.4)</a>
+      <li><a href="#1934118923">Kotlin Stdlib Jdk7 (1.5.30)</a>
+        <dl>
+          <dt>Copyright &copy; 20xx Kotlin Team</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Kotlin Stdlib Jdk8 (1.5.30)</a>
+        <dl>
+          <dt>Copyright &copy; 20xx Kotlin Team</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">kotlinx-coroutines-android (1.5.0)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">kotlinx-coroutines-android (1.4.3)</a>
+      <li><a href="#1934118923">kotlinx-coroutines-core (1.5.0)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">kotlinx-coroutines-core (1.4.3)</a>
-        <dl>
-          <dt>Copyright &copy; 20xx JetBrains Team</dt>
-        </dl>
-      </li>
-      <li><a href="#1934118923">Lifecycle ViewModel Compose (1.0.0-alpha05)</a>
+      <li><a href="#1934118923">Lifecycle ViewModel Compose (2.4.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Palette Kotlin Extensions (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">SavedState Kotlin Extensions (1.1.0)</a>
@@ -603,6 +668,36 @@
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
+</pre>
+<br>
+      <hr>
+      <li><a href="#1783810846">KieronQuinn/MonetCompat (0.2.1)</a>
+        <dl>
+          <dt>Copyright &copy; 2021 Kieron Quinn</dt>
+        </dl>
+      </li>
+<a name="1783810846"></a>
+      <pre>MIT License
+
+Copyright (c) [year] [fullname]
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
 </pre>
 <br>
       <hr>
