--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -21,22 +21,22 @@
           <dt>Copyright &copy; 20xx Google</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity (1.3.1)</a>
-        <dl>
-          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
-        </dl>
-      </li>
       <li><a href="#1934118923">Activity (1.1.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity Compose (1.3.1)</a>
+      <li><a href="#1934118923">Activity (1.4.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Activity Compose (1.4.0)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Activity Kotlin Extensions (1.3.1)</a>
+      <li><a href="#1934118923">Activity Kotlin Extensions (1.4.0)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
@@ -126,22 +126,22 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Common (2.4.0-alpha10)</a>
+      <li><a href="#1934118923">Android Navigation Common (2.4.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Common Kotlin Extensions (2.4.0-alpha10)</a>
+      <li><a href="#1934118923">Android Navigation Common Kotlin Extensions (2.4.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Runtime (2.4.0-alpha10)</a>
+      <li><a href="#1934118923">Android Navigation Runtime (2.4.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Runtime Kotlin Extensions (2.4.0-alpha10)</a>
+      <li><a href="#1934118923">Android Navigation Runtime Kotlin Extensions (2.4.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
@@ -196,7 +196,7 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support Library compat (1.6.0)</a>
+      <li><a href="#1934118923">Android Support Library compat (1.7.0)</a>
         <dl>
           <dt>Copyright &copy; 2015 The Android Open Source Project</dt>
         </dl>
@@ -281,7 +281,12 @@
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">androidx.profileinstaller:profileinstaller (1.0.3)</a>
+      <li><a href="#1934118923">AndroidX Futures (1.0.0)</a>
+        <dl>
+          <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">androidx.profileinstaller:profileinstaller (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
@@ -291,102 +296,102 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation (1.0.3)</a>
+      <li><a href="#1934118923">Compose Animation (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation Core (1.0.3)</a>
+      <li><a href="#1934118923">Compose Animation Core (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Foundation (1.0.3)</a>
+      <li><a href="#1934118923">Compose Foundation (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Geometry (1.0.3)</a>
+      <li><a href="#1934118923">Compose Geometry (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Graphics (1.0.3)</a>
+      <li><a href="#1934118923">Compose Graphics (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Layouts (1.0.3)</a>
+      <li><a href="#1934118923">Compose Layouts (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose LiveData integration (1.0.3)</a>
+      <li><a href="#1934118923">Compose LiveData integration (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Components (1.0.3)</a>
+      <li><a href="#1934118923">Compose Material Components (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Icons Core (1.0.3)</a>
+      <li><a href="#1934118923">Compose Material Icons Core (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Ripple (1.0.3)</a>
+      <li><a href="#1934118923">Compose Material Ripple (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Navigation (2.4.0-alpha10)</a>
+      <li><a href="#1934118923">Compose Navigation (2.4.0-beta01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Runtime (1.0.3)</a>
+      <li><a href="#1934118923">Compose Runtime (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Saveable (1.0.3)</a>
+      <li><a href="#1934118923">Compose Saveable (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling (1.0.3)</a>
+      <li><a href="#1934118923">Compose Tooling (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling API (1.0.3)</a>
+      <li><a href="#1934118923">Compose Tooling API (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling Data (1.0.3)</a>
+      <li><a href="#1934118923">Compose Tooling Data (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI primitives (1.0.3)</a>
+      <li><a href="#1934118923">Compose UI primitives (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI Text (1.0.3)</a>
+      <li><a href="#1934118923">Compose UI Text (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Unit (1.0.3)</a>
+      <li><a href="#1934118923">Compose Unit (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Util (1.0.3)</a>
+      <li><a href="#1934118923">Compose Util (1.0.4)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
@@ -411,27 +416,32 @@
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
+      <li><a href="#1934118923">Guava ListenableFuture only (1.0)</a>
+        <dl>
+          <dt>Copyright &copy; 20xx The original author or authors</dt>
+        </dl>
+      </li>
       <li><a href="#1934118923">IntelliJ IDEA Annotations (13.0)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib (1.5.30)</a>
+      <li><a href="#1934118923">Kotlin Stdlib (1.5.31)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib Common (1.5.30)</a>
+      <li><a href="#1934118923">Kotlin Stdlib Common (1.5.31)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib Jdk7 (1.5.30)</a>
+      <li><a href="#1934118923">Kotlin Stdlib Jdk7 (1.5.31)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib Jdk8 (1.5.30)</a>
+      <li><a href="#1934118923">Kotlin Stdlib Jdk8 (1.5.31)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
