--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -286,7 +286,7 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">androidx.profileinstaller:profileinstaller (1.0.4)</a>
+      <li><a href="#1934118923">androidx.profileinstaller:profileinstaller (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
@@ -296,54 +296,59 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation (1.0.4)</a>
+      <li><a href="#1934118923">Compose Animation (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation Core (1.0.4)</a>
+      <li><a href="#1934118923">Compose Animation Core (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Foundation (1.0.4)</a>
+      <li><a href="#1934118923">Compose Foundation (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Geometry (1.0.4)</a>
+      <li><a href="#1934118923">Compose Geometry (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Graphics (1.0.4)</a>
+      <li><a href="#1934118923">Compose Graphics (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Layouts (1.0.4)</a>
+      <li><a href="#1934118923">Compose Layouts (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose LiveData integration (1.0.4)</a>
+      <li><a href="#1934118923">Compose LiveData integration (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Components (1.0.4)</a>
+      <li><a href="#1934118923">Compose Material Components (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Icons Core (1.0.4)</a>
+      <li><a href="#1934118923">Compose Material Icons Core (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Ripple (1.0.4)</a>
+      <li><a href="#1934118923">Compose Material Ripple (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
+        </dl>
+      </li>
+      <li><a href="#1934118923">Compose Material3 Components (1.0.0-alpha01)</a>
+        <dl>
+          <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
       <li><a href="#1934118923">Compose Navigation (2.4.0-beta02)</a>
@@ -351,47 +356,47 @@
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Runtime (1.0.4)</a>
+      <li><a href="#1934118923">Compose Runtime (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Saveable (1.0.4)</a>
+      <li><a href="#1934118923">Compose Saveable (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling (1.0.4)</a>
+      <li><a href="#1934118923">Compose Tooling (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling API (1.0.4)</a>
+      <li><a href="#1934118923">Compose Tooling API (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling Data (1.0.4)</a>
+      <li><a href="#1934118923">Compose Tooling Data (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI primitives (1.0.4)</a>
+      <li><a href="#1934118923">Compose UI primitives (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI Text (1.0.4)</a>
+      <li><a href="#1934118923">Compose UI Text (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Unit (1.0.4)</a>
+      <li><a href="#1934118923">Compose Unit (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Util (1.0.4)</a>
+      <li><a href="#1934118923">Compose Util (1.1.0-beta02)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
@@ -446,12 +451,12 @@
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">kotlinx-coroutines-android (1.5.0)</a>
+      <li><a href="#1934118923">kotlinx-coroutines-android (1.5.2)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">kotlinx-coroutines-core (1.5.0)</a>
+      <li><a href="#1934118923">kotlinx-coroutines-core (1.5.2)</a>
         <dl>
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
