oss licenses and changelog

--- a/app/src/main/assets/open_source_licenses.html
+++ b/app/src/main/assets/open_source_licenses.html
@@ -76,7 +76,7 @@
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android DB (2.2.0-rc01)</a>
+      <li><a href="#1934118923">Android DB (2.2.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
@@ -141,22 +141,22 @@
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Common (2.4.0-beta02)</a>
+      <li><a href="#1934118923">Android Navigation Common (2.4.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Common Kotlin Extensions (2.4.0-beta02)</a>
+      <li><a href="#1934118923">Android Navigation Common Kotlin Extensions (2.4.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Runtime (2.4.0-beta02)</a>
+      <li><a href="#1934118923">Android Navigation Runtime (2.4.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Navigation Runtime Kotlin Extensions (2.4.0-beta02)</a>
+      <li><a href="#1934118923">Android Navigation Runtime Kotlin Extensions (2.4.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
@@ -181,17 +181,17 @@
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Room Kotlin Extensions (2.4.0-rc01)</a>
+      <li><a href="#1934118923">Android Room Kotlin Extensions (2.4.1)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Room-Common (2.4.0-rc01)</a>
+      <li><a href="#1934118923">Android Room-Common (2.4.1)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Room-Runtime (2.4.0-rc01)</a>
+      <li><a href="#1934118923">Android Room-Runtime (2.4.1)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
@@ -281,7 +281,7 @@
           <dt>Copyright &copy; 2014 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Android Support SQLite - Framework Implementation (2.2.0-rc01)</a>
+      <li><a href="#1934118923">Android Support SQLite - Framework Implementation (2.2.0)</a>
         <dl>
           <dt>Copyright &copy; 2017 The Android Open Source Project</dt>
         </dl>
@@ -306,7 +306,7 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">androidx.profileinstaller:profileinstaller (1.1.0-beta04)</a>
+      <li><a href="#1934118923">androidx.profileinstaller:profileinstaller (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
@@ -316,107 +316,107 @@
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Animation (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Animation Core (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Animation Core (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Foundation (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Foundation (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Geometry (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Geometry (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Graphics (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Graphics (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Layouts (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Layouts (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose LiveData integration (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose LiveData integration (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Components (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Material Components (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2018 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Icons Core (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Material Icons Core (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material Ripple (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Material Ripple (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Material3 Components (1.0.0-alpha02)</a>
+      <li><a href="#1934118923">Compose Material3 Components (1.0.0-alpha03)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Navigation (2.4.0-beta02)</a>
+      <li><a href="#1934118923">Compose Navigation (2.4.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Runtime (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Runtime (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Saveable (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Saveable (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Tooling (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling API (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Tooling API (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Tooling Data (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Tooling Data (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI primitives (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose UI primitives (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose UI Text (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose UI Text (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2019 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Unit (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Unit (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Compose Util (1.1.0-beta04)</a>
+      <li><a href="#1934118923">Compose Util (1.1.0-rc01)</a>
         <dl>
           <dt>Copyright &copy; 2020 The Android Open Source Project</dt>
         </dl>
@@ -451,12 +451,12 @@
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib (1.6.0)</a>
+      <li><a href="#1934118923">Kotlin Stdlib (1.6.10)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Kotlin Stdlib Common (1.6.0)</a>
+      <li><a href="#1934118923">Kotlin Stdlib Common (1.6.10)</a>
         <dl>
           <dt>Copyright &copy; 20xx Kotlin Team</dt>
         </dl>
@@ -481,7 +481,7 @@
           <dt>Copyright &copy; 20xx JetBrains Team</dt>
         </dl>
       </li>
-      <li><a href="#1934118923">Lifecycle ViewModel Compose (2.4.0-rc01)</a>
+      <li><a href="#1934118923">Lifecycle ViewModel Compose (2.4.0)</a>
         <dl>
           <dt>Copyright &copy; 2021 The Android Open Source Project</dt>
         </dl>
